# 2023-fall-c-Renju

./: .gitignore  CMakeLists.txt  Gobang_example.c  Justfile  Main.c  README.md  test.txt  wzq-s1-UTF8.c
doc/: Doc.aux  Doc.out  Doc.tex  Doc.toc
inc/: head.h  log.h
misc/: abandoned.c  ai.c  ai备份.c  head备份.h  test  test.c  五子棋结构体相关知识.pptx  废案.c
src/: ai.c  chessboard.c  functions.c  inputprocess.c  judge.c  judge_score.c  log.c  main.c  state.c
test/: main_xrl.c  test  test.c  xrl
